--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "miami-arc84",
-    "displayName": "Miami Arc84",
+    "name": "miami-arcade",
+    "displayName": "Miami Arcade",
     "description": "Summer nights in a Miami Arcade",
     "version": "0.0.1",
     "engines": {
@@ -12,14 +12,9 @@
     "contributes": {
         "themes": [
             {
-                "label": "Miami Arc84",
+                "label": "Miami Arcade",
                 "uiTheme": "vs-dark",
-                "path": "./themes/miami-arc84.json" 
-            },
-            {
-                "label": "Miami Arc84 Alt",
-                "uiTheme": "vs-dark",
-                "path": "./themes/miami-arc84-alt.json" 
+                "path": "./themes/miami-arcade.json" 
             }
         ]
     }
